--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -1,68 +1,108 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+  color: #f5f5f5;
+}
+
+/* HERO WRAPPER */
+.hero-wrapper {
+  position: relative;
+  padding-top: 160px;
+  text-align: center;
+}
+
+
+.background-title {
+  position: absolute;
+  top: -40px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 100px;
+  font-weight: 800;
+  color: rgba(201, 193, 193, 0.219); 
+  z-index: 0;
+  white-space: nowrap;
+  pointer-events: none;
+}
+
+
+.hero-card {
+  position: relative;
+  z-index: 2;
+  background: #1e2a38;
+  border-radius: 20px;
+  width: 90%;
+  max-width: 1200px;
+  margin: auto;
+  padding: 40px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
+}
+
+
+.hero-content {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: space-between;
+  align-items: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+
+.hero-text {
+  max-width: 500px;
+  text-align: left;
 }
 
-button {
+.hero-text h3 {
+  color: #9ecfff;
+}
+
+.hero-text h2 {
+  font-size: 36px;
+  margin: 10px 0;
+  color: white;
+}
+
+.hero-text p {
+  margin: 20px 0;
+  color: #cfd8dc;
+}
+
+/* BUTTON */
+.hero-btn {
+  padding: 12px 25px;
+  border: none;
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  background: linear-gradient(45deg, #4facfe, #00f2fe);
+  color: black;
+  font-weight: bold;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+
+.hero-image img {
+  width: 300px;
+  height: 350px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+
+@media (max-width: 768px) {
+  .hero-content {
+    flex-direction: column;
+    text-align: center;
   }
-  a:hover {
-    color: #747bff;
+
+  .hero-text {
+    text-align: center;
   }
-  button {
-    background-color: #f9f9f9;
+
+  .hero-image img {
+    margin-top: 20px;
+    width: 250px;
+  }
+
+  .background-title {
+    font-size: 50px;
   }
 }
