--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -5,13 +5,15 @@ body {
   color: #f5f5f5;
 }
 
-/* HERO WRAPPER */
+html {
+  scroll-behavior: smooth;
+}
+
 .hero-wrapper {
   position: relative;
   padding-top: 160px;
   text-align: center;
 }
-
 
 .background-title {
   position: absolute;
@@ -20,12 +22,11 @@ body {
   transform: translateX(-50%);
   font-size: 100px;
   font-weight: 800;
-  color: rgba(201, 193, 193, 0.219); 
+  color: rgba(201, 193, 193, 0.219);
   z-index: 0;
   white-space: nowrap;
   pointer-events: none;
 }
-
 
 .hero-card {
   position: relative;
@@ -39,13 +40,11 @@ body {
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
 }
 
-
 .hero-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 
 .hero-text {
   max-width: 500px;
@@ -67,7 +66,6 @@ body {
   color: #cfd8dc;
 }
 
-/* BUTTON */
 .hero-btn {
   padding: 12px 25px;
   border: none;
@@ -76,8 +74,13 @@ body {
   color: black;
   font-weight: bold;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 
+.hero-btn:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 8px 20px rgba(0, 242, 254, 0.4);
+}
 
 .hero-image img {
   width: 300px;
@@ -86,11 +89,11 @@ body {
   border-radius: 20px;
 }
 
-
 @media (max-width: 768px) {
   .hero-content {
     flex-direction: column;
     text-align: center;
+    gap: 20px;
   }
 
   .hero-text {
@@ -100,6 +103,7 @@ body {
   .hero-image img {
     margin-top: 20px;
     width: 250px;
+    height: auto;
   }
 
   .background-title {
